fetching images and displaying them

--- a/index.html
+++ b/index.html
@@ -9,6 +9,21 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
   </head>
   <body>
+    <!-- Main title -->
+    <div class="title"><h1>Scroll Gallery</h1></div>
+
+    <!-- Loader -->
+
+    <div class="loader" id="loader">
+      <img src="Ellipsis-1s-144px.svg" />
+    </div>
+
+    <!-- Image Container -->
+
+    <div class="image-container" id="image-container"></div>
+
+    <!-- Loader -->
+
     <script src="code.js"></script>
   </body>
 </html>
